--- a/sponsors.html
+++ b/sponsors.html
@@ -9,7 +9,7 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>PIONEER </title>
+    <title>PIONEER</title>
 
     <!-- Google fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,8 +40,8 @@ Author URL: http://w3layouts.com
     <header>
         <nav class="navbar">
             <a href="#" class="brand">
-                <div class="brand-logo"><img src="images/sponsors/logo.png" alt="Pioneer Logo"></div>
-                <span class="brand-text">PIONEER</span>
+                <div class="brand-logo"><img src="images\sponsors\pioneerlogo.png" alt="Pioneer Logo"></div>
+                <span class="brand-text">PIONEER 2026</span>
             </a>
             <div class="menu-toggle" onclick="toggleMenu()">
                 <span></span>
@@ -49,7 +49,7 @@ Author URL: http://w3layouts.com
                 <span></span>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="event.html">Event</a></li>
                 <li><a href="sponsors.html" class="active">Our Sponsors</a></li>
                 <li><a href="team.html">Team</a></li>
@@ -267,3 +267,4 @@ Author URL: http://w3layouts.com
 </body>
 </html>
     
+
