--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@ Author URL: http://w3layouts.com
 
         <nav class="navbar">
             <a href="#" class="brand">
-                <div class="brand-logo"> <img src="images\logo.png" alt="Pioneer Logo" class="brand-logo" style="width:100%;height:100%;">
+                <div class="brand-logo"> <img src="images\sponsors\pioneerlogo.png" alt="Pioneer Logo" class="brand-logo" style="width:100%;height:100%;">
 </div>
-                <span class="brand-text">PIONEER</span>
+                <span class="brand-text">PIONEER 2026</span>
             </a>
             <div class="menu-toggle" onclick="toggleMenu()">
                 <span></span>
