--- a/sponsors.html
+++ b/sponsors.html
@@ -40,7 +40,7 @@ Author URL: http://w3layouts.com
     <header>
         <nav class="navbar">
             <a href="#" class="brand">
-                <div class="brand-logo"><img src="images\sponsors\pioneerlogo.png" alt="Pioneer Logo"></div>
+                <div class="brand-logo"><img src="images/sponsors/pioneerlogo.png" alt="Pioneer Logo"></div>
                 <span class="brand-text">PIONEER 2026</span>
             </a>
             <div class="menu-toggle" onclick="toggleMenu()">
@@ -267,4 +267,5 @@ Author URL: http://w3layouts.com
 </body>
 </html>
     
+
 
