--- a/sponsors.html
+++ b/sponsors.html
@@ -181,7 +181,7 @@ Author URL: http://w3layouts.com
     // Folder 2 images
     for (let i = 1; i <= 17; i++) {
         if (!featuredSponsors.includes(i)) {
-            createSponsorImage(`images/image2/${i}.jpg`, `Sponsor ${i}`);
+            createSponsorImage(`images/sponsors/images2/${i}.jpg', `Sponsor ${i}`);
         }
     }
 
@@ -267,5 +267,6 @@ Author URL: http://w3layouts.com
 </body>
 </html>
     
+
 
 
