--- a/sponsors.html
+++ b/sponsors.html
@@ -181,7 +181,7 @@ Author URL: http://w3layouts.com
     // Folder 2 images
     for (let i = 1; i <= 17; i++) {
         if (!featuredSponsors.includes(i)) {
-            createSponsorImage(`images/sponsors/images2/${i}.jpg' );
+            createSponsorImage(`images/ sponsors/images2/${i}.jpg' );
         }
     }
 
@@ -267,6 +267,7 @@ Author URL: http://w3layouts.com
 </body>
 </html>
     
+
 
 
 
