--- a/sponsors.html
+++ b/sponsors.html
@@ -174,14 +174,14 @@ Author URL: http://w3layouts.com
     // Folder 1 images
     for (let i = 1; i <= 40; i++) {
         if (!featuredSponsors.includes(i)) {
-            createSponsorImage(`images/sponsors/${i}.jpg`, `Sponsor ${i}`);
+            createSponsorImage(`images / sponsors / ${i}.jpg`, `Sponsor ${i}`);
         }
     }
 
     // Folder 2 images
     for (let i = 1; i <= 17; i++) {
         if (!featuredSponsors.includes(i)) {
-            createSponsorImage(`images/ sponsors/images2/${i}.jpg' );
+            createSponsorImage(`images / sponsors / images2 / ${i}.jpg','Sponsor ${i}' );
         }
     }
 
@@ -267,6 +267,7 @@ Author URL: http://w3layouts.com
 </body>
 </html>
     
+
 
 
 
