--- a/sponsors.html
+++ b/sponsors.html
@@ -141,50 +141,44 @@ Author URL: http://w3layouts.com
 
     <script>
    
-    const otherSponsorsContainer = document.getElementById("otherSponsors");
-    const featuredSponsors = [21, 22, 23, 25]; // Skip featured sponsors
+   const otherSponsorsContainer = document.getElementById("otherSponsors");
+const featuredSponsors = [21, 22, 23, 25]; // Featured sponsors
 
-    function createSponsorImage(src, altText) {
-        const sponsorItem = document.createElement("div");
+function createSponsorImage(src, altText) {
+    const sponsorItem = document.createElement("div");
 
-        // Styling via JS
-        sponsorItem.style.width = "100px";
-        sponsorItem.style.height = "100px";
-        sponsorItem.style.display = "flex";
-        sponsorItem.style.alignItems = "center";
-        sponsorItem.style.justifyContent = "center";
-        sponsorItem.style.margin = "15px";
-        sponsorItem.style.background = "#fff";
-        sponsorItem.style.borderRadius = "12px";
-        sponsorItem.style.boxShadow = "0 4px 10px rgba(0,0,0,0.1)";
+    sponsorItem.style.width = "100px";
+    sponsorItem.style.height = "100px";
+    sponsorItem.style.display = "flex";
+    sponsorItem.style.alignItems = "center";
+    sponsorItem.style.justifyContent = "center";
+    sponsorItem.style.margin = "15px";
+    sponsorItem.style.background = "#fff";
+    sponsorItem.style.borderRadius = "12px";
+    sponsorItem.style.boxShadow = "0 4px 10px rgba(0,0,0,0.1)";
 
-        const img = document.createElement("img");
-        img.src = src;
-        img.alt = altText;
+    const img = document.createElement("img");
+    img.src = src;
+    img.alt = altText;
+    img.style.width = "90%";
+    img.style.height = "90%";
+    img.style.objectFit = "contain";
 
-        // Image size increased
-        img.style.width = "90%";
-        img.style.height = "90%";
-        img.style.objectFit = "contain";
+    sponsorItem.appendChild(img);
+    otherSponsorsContainer.appendChild(sponsorItem);
+}
 
-        sponsorItem.appendChild(img);
-        otherSponsorsContainer.appendChild(sponsorItem);
+/* Folder 1: images/sponsors/1.jpg → 40.jpg */
+for (let i = 1; i <= 40; i++) {
+    if (!featuredSponsors.includes(i)) {
+        createSponsorImage(`images/sponsors/${i}.jpg`, `Sponsor ${i}`);
     }
+}
 
-    // Folder 1 images
-    for (let i = 1; i <= 40; i++) {
-        if (!featuredSponsors.includes(i)) {
-            createSponsorImage(`images / sponsors / ${i}.jpg`, `Sponsor ${i}`);
-        }
-    }
-
-    // Folder 2 images
-    for (let i = 1; i <= 17; i++) {
-        if (!featuredSponsors.includes(i)) {
-            createSponsorImage(`images / sponsors / images2 / ${i}.jpg','Sponsor ${i}' );
-        }
-    }
-
+/* Folder 2: images/sponsors/images2/1.jpg → 17.jpg */
+for (let i = 1; i <= 17; i++) {
+    createSponsorImage(`images/sponsors/images2/${i}.jpg`, `Sponsor ${i}`);
+}
 
 
     /* =========================
@@ -267,6 +261,7 @@ Author URL: http://w3layouts.com
 </body>
 </html>
     
+
 
 
 
