Fix HTML encoding issues in CSBS.html

--- a/CSBS.html
+++ b/CSBS.html
@@ -67,11 +67,11 @@
         <div class="poster-container">
             <h2>Event Poster</h2>
             <div class="poster-wrapper">
-                <a href="images/CSBS.webp" target="_blank">
-                    <img src="images/CSBS.webp" alt="Tech-Negotia 2.0 Poster">
+                <a href="images/Event/TechNegotia.png" target="_blank">
+                    <img src="images/Event/TechNegotia.png" alt="Tech-Negotia 2.0 Poster">
                 </a>
             </div>
-            <a href="images/CSBS.webp" download class="btn-secondary-action">
+            <a href="images/Event/TechNegotia.png" download class="btn-secondary-action">
                 <i class="fa fa-download"></i> Download Poster
             </a>
         </div>
