--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ Author URL: http://w3layouts.com
             </div>
            
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="event.html">Event</a></li>
                 <li><a href="sponsors.html">Our Sponsors</a></li>
                 <li><a href="team.html">Team</a></li>
@@ -97,8 +97,8 @@ Author URL: http://w3layouts.com
     <section class="gallery-section">
         <div class="gallery-container">
             <div class="gallery-wrapper">
-                <img src="image1.jpg" alt="Event 1" class="gallery-image active">
-                <img src="image2.jpg" alt="Event 2" class="gallery-image">
+                <img src="image1.JPG" alt="Event 1" class="gallery-image active">
+                <img src="image2.JPG" alt="Event 2" class="gallery-image">
                 <img src="image3.jpg" alt="Event 3" class="gallery-image">
                 <img src="image4.jpg" alt="Event 4" class="gallery-image">
                
